# config_editor

./: Cargo.toml  README.md
src/: app.rs  data_field.rs  data_table.rs  error.rs  main.rs  marco.rs  syntax_highlight.rs  utils.rs
src/app/: action.rs  app.rs  app_cfg.rs  mod.rs  syntax_highlight.rs  theme.rs
src/data/: data_field.rs  data_table.rs  mod.rs
src/saver/: csv.rs  excel.rs  json.rs  mod.rs  scsv.rs
